# exact_center

./: .gitignore  README.md  center_exact.py
DBSCAN_test/: dbscan.cpp  dbscan.h  dbscanImg  dbscanImg.cpp  dbscanImg.h  main  main.cpp
alg103runimage/: alg103runimage  alg103runimage.cpp  myhalcv2.cpp
alg_103_test/: alg_103_runimage  alg_103_runimage.cpp  myhalcv2  myhalcv2.cpp  readme.md
extractLine_steger/: extraceline_steger  extraceline_steger.cpp  readme.md
gray_centroid_base/: gray_centroid_base  gray_centroid_base.cpp
gray_centroid_thining/: gray_centroid_thining  gray_centroid_thining.cpp
histogram/: calcHist  calcHist.cpp  image_histogram.py
ll_test/: ll_test  ll_test.cpp
matplotlibcpp_test/: matplotlibcpp.cpp
monoStructuredLight/: fringeGenerate  fringeGenerate.cpp
otsu/: otsu  otsu.cpp
ros2_test_center/install/: local_setup.sh  setup.bash  setup.ps1  (+2 more)
ros2_test_center/src/test_laser_center/: CMakeLists.txt
ros2_test_center/src/test_laser_center/include/test_laser_center/: sub_process.hpp
ros2_test_center/src/test_laser_center/src/: myhalcv2.cpp  sub_process.cpp
steger/: steger  steger.cpp
test_calibration/: calibration_img  calibration_img.cpp
test_cv_lookuptable/: testLUT  testLUT.cpp
test_hls/: hls  hls.cpp
test_lookuptable/: testLUT  testLUT.cpp
test_parallel/: how_to_use_OpenCV_parallel_for_  how_to_use_OpenCV_parallel_for_.cpp
test_tilt_calibration/: tilt_calibration  tilt_calibration.cpp
transparency_test/: edgeDetection  edgeDetection.cpp  edgeDetection.h  grayTo3D.py  test.py  transparency_test  transparency_test.cpp  transparency_test.hpp
weld_test/: weld_reflect  weld_reflect.cpp
(+12 files in other folders)
